kubernetes/projects/entertainment/apps/media-storage/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: media-stack
    field.cattle.io/projectId: p-rm645
    kubernetes.io/metadata.name: media
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
  annotations:
    field.cattle.io/projectId: local:p-rm645
    helm.sh/resource-policy: keep
    meta.helm.sh/release-name: media-storage
    meta.helm.sh/release-namespace: media
