kubernetes/projects/entertainment/apps/media-storage/keeper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-library-keeper
  namespace: media
  labels:
    app.kubernetes.io/name: media-library-keeper
    app.kubernetes.io/part-of: media-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: media-library-keeper
  template:
    metadata:
      labels:
        app.kubernetes.io/name: media-library-keeper
        app.kubernetes.io/part-of: media-stack
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: keeper
          image: registry.home/docker.io/library/busybox:1.38 # {"$imagescan": "media-storage-busybox"}
          command:
            - /bin/sh
            - -c
          args:
            - sleep infinity
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 96Mi
          securityContext:
            runAsUser: 568
            runAsGroup: 568
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: media-library
              mountPath: /media
      volumes:
        - name: media-library
          persistentVolumeClaim:
            claimName: media-library-nas
        - name: media-downloads
          persistentVolumeClaim:
            claimName: media-downloads
